# BattleScribeExtractor

./: .gitignore  README.md  model_data.tsv  pyproject.toml  run_me.py  test.py  weapon_data.tsv
battlescribeextractor/: __init__.py  extractors.py  model_extractor.py
tests/: test_model_extractor.py
