[tool.poetry]
name = "battlescribeextractor"
version = "0.1.0"
description = ""
authors = ["Ninjalemur <ninjalemur33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
